<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteNoteActivity">

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnDelete"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/delete_note"
        android:onClick="onDeleteButtonClick" />

    <EditText
        android:id="@+id/edtNoteContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtNoteName"
        android:layout_marginTop="8dp"
        android:hint="@string/note_content_hint" />

    <EditText
        android:id="@+id/edtNoteName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_name_hint" />


</RelativeLayout>
